# nox

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  format.sh  tidy.sh
.github/workflows/: formatter.yml
cmake/: glib.cmake
cmake/Modules/: FindFFMPEG.cmake  FindGTK3.cmake  FindGTKMM3.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  DXTextureInterop.cpp  DXTextureInterop.hpp  DXTextureMapper.cpp  DXTextureMapper.hpp  HWUtil.hpp  IStream.hpp  ITextureInterop.hpp  ITextureMapper.hpp  Media.cpp  Media.hpp  Platform.hpp  Texture.cpp  Texture.hpp  TextureBinder.cpp  TextureBinder.hpp  VideoStream.cpp  VideoStream.hpp
src/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  PreviewArea.cpp  PreviewArea.hpp  TimeLine.hpp
